--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "mongodb": "^3.1.0",
-    "mongoose": "^5.6.0"
+    "mongoose": "^5.6.0",
+    "validator": "^10.9.0"
   }
 }
